--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 GEMINI_API_KEY=AIzaSyC-71Qaur7NQ1hHhzZtIkwkhx1lyqDwOHc
 PORT=3000
-MONGO_URI=mongodb+srv://amanda:19052025@cluster0.mongodb.net/ecolink?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://amanda:19052024@cluster0.b30sgoz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
